; ModuleID = '/home/carl/AnghaBench/i3/src/extr_util.c_pango_escape_markup.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_util.c_pango_escape_markup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pango_escape_markup(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call i32 (...) @font_is_pango()
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  store i8* %8, i8** %2, align 8
  br label %15

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i8* @g_markup_escape_text(i8* %10, i32 -1)
  store i8* %11, i8** %4, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @FREE(i8* %12)
  %14 = load i8*, i8** %4, align 8
  store i8* %14, i8** %2, align 8
  br label %15

15:                                               ; preds = %9, %7
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local i32 @font_is_pango(...) #1

declare dso_local i8* @g_markup_escape_text(i8*, i32) #1

declare dso_local i32 @FREE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
